fixed overlap of buttons on edge

--- a/tilestyles.css
+++ b/tilestyles.css
@@ -76,6 +76,7 @@ section {
 
 #editor {
     float: left;
+    min-width: 500px;
     position: relative;
     top: 20px;
     left: 50px;
@@ -140,8 +141,8 @@ canvas {
 #main {
     background-color: #111;
     background-image: linear-gradient(45deg, #333 25%, transparent 25%, transparent 75%, #333 75%, #333), linear-gradient(45deg, #333 25%, transparent 25%, transparent 75%, #333 75%, #333);
-    background-size: 20px 20px;
-    background-position:0 0, 10px 10px;
+    background-size: 40px 40px;
+    background-position:0 0, 20px 20px;
     border: 20px solid black;
 }
 
